<resources>
    <string name="app_name">LunchBox</string>
    <string name="home">Home</string>
    <string name="search">search</string>
    <string name="setting">setting</string>
    <string name="alarm">alarm</string>
    <string name="profile">profile</string>

    <!--<가람작성>-->
    <string name="txt_title">런치박스</string>
    <!--</가람작성>-->

    <!--<로이작성>-->
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_name">설정</string>
    <string name="setting_main_category1">서비스 안내</string>
    <string name="setting_main_category2">약관 및 정책</string>
    <string name="setting_main_category3">고객센터</string>
    <string name="setting_sub_category1">공지사항</string>
    <string name="setting_sub_category2">버전 정보</string>
    <string name="setting_sub_category3">위치기반 서비스 이용약관</string>
    <!--</로이작성>-->

    <!--<지연작성>-->
    <string name="searchBtn">지연버튼</string>
    <string name="searchEdit">검색창</string>
    <string name="menu_picker_start">런치메뉴랜덤박스실행</string>
    <!--</지연작성>-->


</resources>
