<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/home"
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_home"/>

    <item
        android:title="@string/alarm"
        android:id="@+id/navigation_alarm"
        android:icon="@drawable/bottom_alarm"/>

    <item
        android:title="@string/search"
        android:id="@+id/navigation_search"
        android:icon="@drawable/bottom_search"/>

    <item
        android:title="@string/profile"
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bottom_profile"/>

    <item
        android:title="@string/setting"
        android:id="@+id/navigation_setting"
        android:icon="@drawable/bottom_setting" />
</menu>
